# Kiwi-Machine

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.py
src/client/kiwi_machine/: CMakeLists.txt  main.cc
src/client/kiwi_machine/debug/: debug_port.h  debug_roms.cc  debug_roms.h
src/client/kiwi_machine/models/: nes_audio.cc  nes_config.cc  nes_config.h  nes_frame.h  nes_runtime.cc  nes_runtime.h
src/client/kiwi_machine/preset_roms/: arkanoid_usa.inc  balloon_fight_usa.inc  battlecity_japan.inc  bomber_man_ii_japan.inc  castlevania_ii__simons_quest_usa.inc  castlevania_usa.inc  chackn_pop_japan.inc  chip_n_dale__rescue_rangers_2_usa.inc  chip_n_dale__rescue_rangers_usa.inc  circus_charlie_japan.inc  clu_clu_land_world.inc  contra_u.inc  crystalis_usa.inc  donkey_kong_usa_gamecube_edition.inc  dr_mario_japan_usa.inc  dragon_warrior_2_u.inc  dragon_warrior_usa_rev_a.inc  excitebike_japan_usa.inc  extra_mario_bros.inc  field_combat_japan.inc  final_fantasy_usa.inc  flipull__an_exciting_cube_game_japan_en.inc  funny_princess.inc  ghostsn_goblins_usa.inc  goonies_japan.inc  gradius_usa.inc  ice_climber_japan.inc  kamikaze_v3.inc  kirbys_adventure_usa_rev_a.inc  kuniokun_no_nekketsu_soccer_league_japan.inc  legend_of_zelda_the_usa_rev_a.inc  lode_runner_usa.inc  luigis_chronicles.inc  lunar_pool_usa.inc  mappy_japan.inc  mario_bros_usa_gamecube_edition.inc  metroid_usa.inc  milons_secret_castle_usa.inc  mitsume_ga_tooru_japan.inc  nekketsu_kakutou_densetsu_japan.inc  (+42 more)
src/client/kiwi_machine/resources/: gen_audio_resources.py  gen_image_resources.py
src/client/kiwi_machine/ui/: application.cc  application.h  main_window.cc  main_window.h  window_base.cc  window_base.h
src/client/kiwi_machine/utility/: audio_effects.cc  audio_effects.h  fonts.cc  fonts.h  images.cc  images.h  key_mapping_util.cc  key_mapping_util.h  math.cc  math.h  text_content.cc  text_content.h  timer.cc  zip_reader.cc  zip_reader.h
src/client/kiwi_machine_core/: CMakeLists.txt  kiwi_flags.h  kiwi_machine.resources.json  kiwi_main.cc  kiwi_main.h
src/client/kiwi_machine_core/debug/: debug_port.cc  debug_port.h  debug_roms.cc  debug_roms.h
src/client/kiwi_machine_core/models/: nes_audio.cc  nes_audio.h  nes_config.cc  nes_config.h  nes_frame.cc  nes_frame.h  nes_runtime.cc  nes_runtime.h
src/client/kiwi_machine_core/preset_roms/: preset_roms.cc  preset_roms.h  preset_roms_impl.cc
src/client/kiwi_machine_core/resources/: gen_font_resources.py
src/client/kiwi_machine_core/testing/: CMakeLists.txt
src/client/kiwi_machine_core/ui/: application.cc  application.h  main_window.cc  main_window.h  main_window_android.cc  main_window_mobile.cc  styles.cc  styles.h  window_base.cc  window_base.h  window_base_ios.mm
src/client/kiwi_machine_core/utility/: algorithm.cc  algorithm.h  algorithm_unittest.cc  audio_effects.cc  audio_effects.h  fonts.cc  fonts.h  fps_counter.cc  fps_counter.h  images.cc  images.h  key_mapping_util.cc  key_mapping_util.h  localization.cc  localization.h  logging.h  math.cc  math.h  math_unittest.cc  resources_bundle.cc  resources_bundle.h  richtext_content.cc  richtext_content.h  timer.h  touch_manager.cc  touch_manager.h  zip_reader.cc  zip_reader.h
src/client/tools/package_manager/: CMakeLists.txt  auto_package.py  db.inc  db.json  main.cc  rom_window.cc  rom_window.h  util.cc  util.h  util.mm  util_mac.mm  util_posix.cc  util_win.cc  workspace.cc  workspace.h
src/client/tools/vrc/: CMakeLists.txt  main.cc
src/debugger/: CMakeLists.txt  debugger_debug_port.cc  debugger_debug_port.h  debugger_main.cc
src/kiwi/: CMakeLists.txt
src/kiwi/base/: atomic_ref_count.h  auto_reset.h  base64.cc  base64.h  base_export.h  command_line.cc  command_line.h  compiler_specific.h  cxx20_to_address.h  dcheck_is_on.h  environment.cc  environment.h  file_version_info.h  file_version_info_win.cc  file_version_info_win.h  immediate_crash.h  location.cc  location.h  logging.h  native_library.cc  native_library.h  native_library_mac.mm  native_library_win.cc  no_destructor.h  observer_list.h  observer_list_internal.cc  observer_list_internal.h  observer_list_types.cc  observer_list_types.h  runloop.cc  runloop.h  scoped_clear_last_error.h  scoped_clear_last_error_win.cc  scoped_generic.h  scoped_native_library.cc  scoped_native_library.h  scoped_observation.h  scoped_observation_traits.h  template_util.h  uuid.cc  (+3 more)
src/kiwi/base/apple/: bridging.h  dispatch_source_mach.cc  dispatch_source_mach.h  scoped_cftyperef.h  scoped_dispatch_object.h  scoped_mach_port.cc  scoped_mach_port.h  scoped_nsautorelease_pool.h  scoped_nsautorelease_pool.mm  scoped_typeref.h
src/kiwi/base/containers/: adapters.h  buffer_iterator.h  checked_iterators.h  linked_list.cc  linked_list.h  util.h
src/kiwi/base/debug/: stack_trace.cc  stack_trace.h  stack_trace_posix.cc  stack_trace_win.cc
src/kiwi/base/files/: file.cc  file.h  file_enumerator.cc  file_enumerator.h  file_enumerator_posix.cc  file_enumerator_win.cc  file_path.cc  file_path.h  file_posix.cc  file_util.cc  file_util.h  file_util_apple.mm  file_util_posix.cc  file_util_win.cc  file_win.cc  safe_base_name.cc  safe_base_name.h  scoped_file.cc  scoped_file.h
src/kiwi/base/functional/: bind.h  bind_internal.h  callback.h  callback_forward.h  callback_helpers.cc  callback_helpers.h  callback_internal.cc  callback_internal.h  callback_tags.h
src/kiwi/base/hash/: hash.cc  hash.h
src/kiwi/base/mac/: mach_port_rendezvous.cc  mach_port_rendezvous.h  (+4 more)
src/kiwi/nes/: apu.cc  apu.h  bus.cc  bus.h  cartridge.cc  cartridge.h  controller.cc  controller.h  cpu.cc  cpu.h  cpu_bus.cc  cpu_bus.h  cpu_observer.cc  cpu_observer.h  cpu_unittest.cc  emulator.cc  emulator.h  emulator_impl.cc  emulator_impl.h  emulator_states.cc  emulator_states.h  io_devices.cc  io_devices.h  mapper.cc  mapper.h  nes_export.h  opcodes.cc  opcodes.h  palette.cc  palette.h  ppu.cc  ppu.h  ppu_bus.cc  ppu_bus.h  ppu_observer.cc  ppu_observer.h  ppu_patch.cc  ppu_patch.h  registers.h  rom_data.cc  (+2 more)
src/kiwi/testing/: CMakeLists.txt  rom_test.cc  rom_test.h  test_main.cc
(+521 files in other folders)
